...
          ),
        }}
      />
      <Tabs.Screen
        name="doctors"
        options={{
          title: "의료진",
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="medkit" size={size ?? 22} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
